src/objects/BLN_Event_timing__c.object
<CustomObject>
    <description>This table is to enforce ticket duration and timings
For example if a session is between 9am to 10am then this ticket will be invalid after 10am</description>
    <fields>
        <fullName>BLN_Events__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BLN Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Event_timings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_time__c</fullName>
        <label>End time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Item_Type_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Type id</label>
        <referenceTo>Item_Type__c</referenceTo>
        <relationshipName>Event_timings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_time__c</fullName>
        <label>Start time</label>
        <type>DateTime</type>
    </fields>
    <label>BLN Event timing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ET_{0000000}</displayFormat>
        <label>Event Time</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Event timings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>